radware/dhanuj/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
spec:
  selector:
    matchLabels:
      app: testapp
  replicas: 1
  template: 
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: testapp1
        image: yanivomc/spring-music:latest
        ports:
        - containerPort: 8080
