radware/dhanuj/qos.yaml
apiVersion: v1
kind: Pod
metadata:
  name: music-burstable
spec:
  containers:
  - name: music
    image: yanivomc/spring-music:latest
    resources:
      limits:
        memory: "200Mi"
        cpu: "200m"
      requests:
        memory: "100Mi"
        cpu: "100m"
---
apiVersion: v1
kind: Pod
metadata:
  name: music-guaranteed
spec:
  containers:
  - name: music
    image: yanivomc/spring-music:latest
    resources:
      limits:
        memory: "200Mi"
        cpu: "200m"
      requests:
        memory: "200Mi"
        cpu: "200m"
---
apiVersion: v1
kind: Pod
metadata:
  name: music-besteffort
spec:
  containers:
  - name: music
    image: yanivomc/spring-music:latest
