radware/dhanuj/deployment-bear-moose.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bear-deployment
spec:
  selector:
    matchLabels:
      app: bear
  replicas: 3
  template: 
    metadata:
      labels:
        app: bear
        grp: bearmoose
    spec:
      containers:
      - name: bear
        image: supergiantkir/animals:bear
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moose-deployment
spec:
  selector:
    matchLabels:
      app: moose
  replicas: 2
  template: 
    metadata:
      labels:
        app: moose
        grp: bearmoose
    spec:
      containers:
      - name: moose
        image: supergiantkir/animals:moose
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: bear-service
spec:
  selector:
    app: bear
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: moose-service
spec:
  selector:
    app: moose
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
