radware/dhanuj/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: testapp
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
