radware/dhanuj/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bear-1
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"

spec:
  ingressClassName: nginx
  rules:
    - http:
       paths:
        - path: /
          pathType: Prefix

          backend:
            service:
              name: bear-service
              port:
                 number: 80
                 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-moose-1

spec:
  ingressClassName: nginx
  rules:
    - http:
       paths:
        - path: /
          pathType: Prefix

          backend:
            service:
              name: moose-service
              port:
                 number: 80
